Selection is not erased when Find Next from the Find window causes the page to scroll. b=311304 p=smorgan r=sfraser sr=pinkerton