widget/src/cocoa/nsChildView.mm
@@ -23,6 +23,7 @@
  *   Josh Aas <josh@mozilla.com>
  *   Mark Mentovai <mark@moxienet.com>
  *   Håkan Waara <hwaara@gmail.com>
+ *   Stuart Morgan <stuart.morgan@alumni.case.edu>
  *
  * Alternatively, the contents of this file may be used under the terms of
  * either the GNU General Public License Version 2 or later (the "GPL"), or 
@@ -133,6 +134,8 @@ static NSView* sLastViewEntered = nil;
 - (BOOL)childViewHasPlugin;
 
 - (BOOL)isRectObscuredBySubview:(NSRect)inRect;
+
+- (void)processPendingRedraws;
 
 #if USE_CLICK_HOLD_CONTEXTMENU
  // called on a timer two seconds after a mouse down to see if we should display
@@ -1196,7 +1199,7 @@ NS_IMETHODIMP nsChildView::Invalidate(PRBool aIsSynchronous)
   else if ([NSView focusView]) {
     // if a view is focussed (i.e. being drawn), then postpone the invalidate so that we
     // don't lose it.
-    [mView performSelector:@selector(setNeedsDisplayWithValue:) withObject:nil afterDelay:0];
+    [mView setNeedsPendingDisplay];
   }
   else {
     [mView setNeedsDisplay:YES];
@@ -1224,7 +1227,7 @@ NS_IMETHODIMP nsChildView::Invalidate(const nsRect &aRect, PRBool aIsSynchronous
   else if ([NSView focusView]) {
     // if a view is focussed (i.e. being drawn), then postpone the invalidate so that we
     // don't lose it.
-    [mView performSelector:@selector(setNeedsDisplayWithValue:) withObject:[NSValue valueWithRect:r] afterDelay:0];
+    [mView setNeedsPendingDisplayInRect:r];
   }
   else {
     [mView setNeedsDisplayInRect:r];
@@ -2198,21 +2201,40 @@ NSEvent* globalDragEvent = nil;
   mWindow = aWindow;
 }
 
-//
-// -setNeedsDisplayWithValue:
-//
-//
-- (void)setNeedsDisplayWithValue:(NSValue*)inRectValue
+- (void)setNeedsPendingDisplay
 {
-  if (inRectValue) {
-    NSRect theRect = [inRectValue rectValue];
-    [self setNeedsDisplayInRect:theRect];
-  }
-  else {
-    [self setNeedsDisplay:YES];
-  }
+  mPendingFullDisplay = YES;
+  [self performSelector:@selector(processPendingRedraws) withObject:nil afterDelay:0];
 }
 
+- (void)setNeedsPendingDisplayInRect:(NSRect)invalidRect
+{
+  if (!mPendingDirtyRects)
+    mPendingDirtyRects = [[NSMutableArray alloc] initWithCapacity:1];
+  [mPendingDirtyRects addObject:[NSValue valueWithRect:invalidRect]];
+  [self performSelector:@selector(processPendingRedraws) withObject:nil afterDelay:0];
+}
+
+//
+// -processPendingRedraws
+//
+// Clears the queue of any pending invalides
+//
+- (void)processPendingRedraws
+{
+  if (mPendingFullDisplay) {
+    [self setNeedsDisplay:YES];
+  }
+  else {
+    unsigned int count = [mPendingDirtyRects count];
+    for (unsigned int i = 0; i < count; ++i) {
+      [self setNeedsDisplayInRect:[[mPendingDirtyRects objectAtIndex:i] rectValue]];
+    }
+  }
+  mPendingFullDisplay = NO;
+  [mPendingDirtyRects release];
+  mPendingDirtyRects = nil;
+}
 
 - (NSString*)description
 {
@@ -2426,6 +2448,21 @@ NSEvent* globalDragEvent = nil;
     mGeckoChild->LiveResizeEnded();
 
   [super viewDidEndLiveResize];
+}
+
+- (void)scrollRect:(NSRect)aRect by:(NSSize)offset
+{
+  // Update any pending dirty rects to reflect the new scroll position
+  if (mPendingDirtyRects) {
+    unsigned int count = [mPendingDirtyRects count];
+    for (unsigned int i = 0; i < count; ++i) {
+      NSRect oldRect = [[mPendingDirtyRects objectAtIndex:i] rectValue];
+      NSRect newRect = NSOffsetRect(oldRect, offset.width, offset.height);
+      [mPendingDirtyRects replaceObjectAtIndex:i
+                                    withObject:[NSValue valueWithRect:newRect]];
+    }
+  }
+  [super scrollRect:aRect by:offset];
 }
 
 - (BOOL)mouseDownCanMoveWindow
